Last minute fix for fullscreen

--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,6 +1,12 @@
 * Tue Oct 02 2012 Antonio Orefice <xt7player@gmail.com> 3.3.0
 
 * Tue Oct 02 2012 Antonio Orefice <xt7player@gmail.com> 3.3.0
+
+* Tue Oct 02 2012 Antonio Orefice <xt7player@gmail.com> 3.3.0
+
+* Tue Oct 02 2012 Antonio Orefice <xt7player@gmail.com> 3.3.0
+
+* Tue Oct 02 2012 Antonio Orefice <xt7player@gmail.com> 3.3.0
 - Oct 02 2012
 - FIX:    Fixed versioncheck() function
 - Sep 28 2012
