--- a/.lang/ru.po
+++ b/.lang/ru.po
@@ -6,6 +6,7 @@ msgstr ""
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -6200,7 +6201,7 @@ msgstr "Дорожка №."
 
 #: Global.module:94
 msgid "Translate me first"
-msgstr "-"
+msgstr "DONE"
 
 #: TranslationNeeded.form:14
 msgid "Translation needed!"
