--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,3 +1,9 @@
+* Wed Dec 19 2012 Antonio Orefice <xt7player@gmail.com> 3.3.5
+- Be compatible with youtube-dl >=2012.12.11
+
+* Wed Dec 19 2012 Antonio Orefice <xt7player@gmail.com> 3.3.4
+- Be compatible with youtube-dl >=2012.12.11
+
 * Fri Dec 14 2012 Antonio Orefice <xt7player@gmail.com> 3.3.4
 - CHANGE: gb.signal required
 - CHANGE: Update Russian (Виктор/VictorR2007) and italian translation
