Rewrote fileview selection code to be compatible with gambas 3.4.0

--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,3 +1,7 @@
+* Fri Mar 08 2013 Antonio Orefice <xt7player@gmail.com> 3.4.1
+- CHANGE: Browse youtube tree by using subthreads
+- FIX: some youtube tree fixes
+
 * Thu Mar 07 2013 Antonio Orefice <xt7player@gmail.com> 3.4.0
 - Mar 07 2013
 - FIX:    Small cosmetic fix for gambas <3.4.0
