On seekbar drag, do a seek only when using left mouse button - Bigger live previews

--- a/.lang/GeneralOptions.pot
+++ b/.lang/GeneralOptions.pot
@@ -59,11 +59,11 @@ msgid "Auto add eq2 and hue filters to video chain"
 msgstr ""
 
 #: GeneralOptions.form:428
-msgid "Enable the animated video preview\nwhen you drag the seekbar with the mouse.\n\nRequires more cpu power."
+msgid "Enable the animated video preview\nwhen you drag the seekbar with the mouse.\n\n* Requires more cpu power.\n\n* If you drag with mouse buttons other than left, then no seek is made."
 msgstr ""
 
 #: GeneralOptions.form:434
-msgid "Show animated preview when seeking"
+msgid "Live preview when seeking"
 msgstr ""
 
 #: GeneralOptions.form:442
@@ -327,7 +327,7 @@ msgid "Restart youtube stream instead of seeking"
 msgstr ""
 
 #: GeneralOptions.form:1175
-msgid "Enable the animated video preview\nwhen you drag the seekbar with the mouse.\n\n* Requires a fast network connection and more cpu power."
+msgid "Enable the animated video preview\nwhen you drag the seekbar with the mouse.\n\n* Requires a fast network connection and more cpu power.\n\n* If you drag with mouse buttons other than left, then no seek is made."
 msgstr ""
 
 #: GeneralOptions.form:1203
