--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,5 +1,7 @@
 * Fri May 03 2013 Antonio Orefice <xt7player@gmail.com> 3.4.2
 
+* Fri May 03 2013 Antonio Orefice <xt7player@gmail.com> 3.4.2
+
 * Fri May 03 2013 Antonio Orefice <xt7player@gmail.com> 3.4.1
 - May 02 2013
 - FIX:    Following "browse" playqueue didnt work when starting xt7 with a mediafile argument (gb 3.4.1 bug)
