Image viewing capabilities interfree with subtitles preview

--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,3 +1,7 @@
+* Mon Jul 22 2013 Antonio Orefice <xt7player@gmail.com> 3.4.4
+- Updated Russian translation from VictoR
+- Removed unneeded webkit dep
+
 * Fri Jul 19 2013 Antonio Orefice <xt7player@gmail.com> 3.4.3
 - CHANGE: Every change to a ladspa filter is applied/tested in realtime
 - CHANGE: Workaround to keep volume level after applying audio filter parameters change without restarting mplayer
