missing shoutcast changes

--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,6 +1,8 @@
 * Tue Nov 05 2013 Antonio Orefice <xt7player@gmail.com> 3.5.1
 
 * Tue Nov 05 2013 Antonio Orefice <xt7player@gmail.com> 3.5.1
+
+* Tue Nov 05 2013 Antonio Orefice <xt7player@gmail.com> 3.5.1
 - FIX: fixed ans simplified parsing of shoutcast feeds
 
 * Tue Nov 05 2013 Antonio Orefice <xt7player@gmail.com> 3.5.0
