"Related videos" wasn't needed/used since youtube tree navigation for related videos was introduced months ago.

--- a/.lang/it.po
+++ b/.lang/it.po
@@ -6789,7 +6789,7 @@ msgstr "Risultati della ricerca personalizzata"
 
 #: YoutubeClass.class:26
 msgid "*Related Videos"
-msgstr "*Video Correlati"
+msgstr "*Video correlati"
 
 #: YoutubeClass.class:114
 msgid "More Related to: "
