--- a/.lang/GeneralOptions.pot
+++ b/.lang/GeneralOptions.pot
@@ -319,7 +319,7 @@ msgid "1080p"
 msgstr ""
 
 #: GeneralOptions.form:1150
-msgid "If available, 3D videos will be displayed instead of 2D ones.\nDisabling this option will completely discard 3D videos."
+msgid "If available, 3D videos will be displayed instead of 2D ones.\nDisabling this option will completely discard 3D videos.\n\nNOTES:\n It may be necessary to use the stereo3d video filter\nUsing the stereo3d video disables GPU decoding."
 msgstr ""
 
 #: GeneralOptions.form:1152
